--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <properties>
         <jenkins.version>2.7.3</jenkins.version>
         <java.level>8</java.level>
+        <workflow.version>2.5</workflow.version>
     </properties>
     <name>Conduit Plugin</name>
     <description>Jase Kirby's plugin called conduit to learn plugin development</description>
